Fixed about page spacing

--- a/src/components/about/styles.css
+++ b/src/components/about/styles.css
@@ -25,7 +25,7 @@
   background: #292f33;
   position: relative;
   z-index: 999;
-  padding: 0 0.5rem 0.5rem 0.5rem;
+  padding: 2rem;
   border-radius: 20px;
   max-width: 400px;
 }
